# MetalHead

./: .gitattributes  .gitignore  README.md
Arduino/: Bender.cpp  Interface.cpp  Interface.h  Recipe.cpp  Recipe.h
docs/: Typical Bender operation.docx  Updated Bender operations.docx
docs/assets/: MH.ai  block-diagram.puml  metalhead.xcf
docs/videos/: README.md
firmware/interface-board-arduino/: platformio.ini
firmware/interface-board-zephyr/: .gitignore  bossac.py
firmware/interface-board-zephyr/application/: CMakeLists.txt  MetalHead.dts  prj.conf
firmware/interface-board-zephyr/application/dts/bindings/: gpio.yaml
firmware/interface-board-zephyr/application/src/: angle_t.h  async_tcp_server.h  bar_size_t.h  bend_direction_t.h  client.h  eeprom_data_map_t.h  gpio_dt_specs.h  gpio_int_handler.h  gpio_pin_t.h  gpio_state_t.h  hmi_client_msg.proto  hmi_client_pkt.proto  hmi_server_msg_t.proto  init_current_mon.h  init_eeprom.h  init_gpio.h  init_net.h  int_label_t.h  interface.h  interface_t.h  interrupt_debug_thread.h  keypad_action.h  keypad_action_t.h  main.c  primary_action_t.h  queues.h  secondary_action_t.h  semaphores.h  server.h  shape_t.h  state_t.h  status_indicators_t.pb.h  status_indicators_t.proto  threads.h  update_status_indicators.h  version.h
firmware/keypad/: platformio.ini
hardware/hmi-carrier-board/: fp-lib-table  hmi-carrier-board.kicad_pcb  hmi-carrier-board.kicad_pro  hmi-carrier-board.kicad_sch  sym-lib-table
hardware/input-test-fixture/: MEP-MAXI-85V-1-REV-2-Sensor-Test-Jig.kicad_pcb  fp-info-cache  (+4 more)
(+223 files in other folders)
